# aoc2025

./: .gitignore  .gitmodules
01/: CMakeLists.txt  main.cc  test_input.hh
02/: main.cc  notes.tsv  sample_input.hh
03/: main.cc  sample_input.hh
04/: main.cc  sample_input.hh
05/: main.cc  sample_input.hh
06/: main.cc  sample_input.hh  sample_input2.hh
07/: CMakeLists.txt  main.cc  sample_input.hh
08/: main.cc  pos.hh  sample_input.hh
09/: main.cc  pos.hh  sample_input.hh
10/: machine.hh  main.cc  parse.hh  sample_input.hh
common/: fileparse.hh
